# bencher

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake
include/bencher/: bar_chart.hpp  bencher.hpp  cache_clearer.hpp  diagnostics.hpp  do_not_optimize.hpp  event_counter.hpp  json.hpp  line_chart.hpp  radar_chart.hpp
include/bencher/counters/: apple_arm_perf_events.hpp  linux_perf_events.hpp  windows_perf_events.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/glaze_test/: CMakeLists.txt  glaze_test.cpp
tests/simple_test/: CMakeLists.txt  simple_test.cpp
tests/unit_test/: CMakeLists.txt  unit_test.cpp
